--- a/app/views/application/root/_keywords_section.haml
+++ b/app/views/application/root/_keywords_section.haml
@@ -1,12 +1,5 @@
 .ui-resources-holder.pal#keywords
-  .ui-resources-header
-    %h2.title-l.ui-resource-title
-      = section_content[:data][:title]
-      %a.strong{href: section_content[:data][:url]}
-        - if section_content[:show_all_text]
-          = section_content[:show_all_text]
-        - else
-          = t(:vocabularies_show_all)
+  = render "application/root/section_title", section_content: section_content
   %ul.ui-tag-cloud{style: "margin-bottom:40px;"}
     - section_content[:data][:list].each do |keyword|
       = render "application/root/keywords/keyword", keyword: keyword
