--- a/app/views/application/root/_section_title.haml
+++ b/app/views/application/root/_section_title.haml
@@ -2,8 +2,6 @@
   .ui-resources-header
     %h2.title-l.ui-resource-title
       = section_content[:data][:title]
-      %a.strong{href: section_content[:data][:url]}
-        - if section_content[:show_all_text]
-          = section_content[:show_all_text]
-        - else
-          = t(:vocabularies_show_all)
+      - if section_content[:show_all_link]
+        %a.strong{href: section_content[:data][:url]}
+          = section_content[:show_all_text] || t('resources_section_show_all')
