--- a/app/views/application/root.haml
+++ b/app/views/application/root.haml
@@ -2,14 +2,22 @@
 
 .app-body-ui-container.pts.context-home
 
+  - unless @get.catalog_section.empty?
+    %hr.separator
+    = render "application/root/catalog_section", section: @get.catalog_section
+
   - unless @get.latest_section.empty?
     %hr.separator
     = render "application/root/latest_section", section: @get.latest_section
 
+  - unless @get.featured_content_section.empty?
+    %hr.separator
+    = render "application/root/featured_section", section: @get.featured_content_section
+
   - unless @get.keywords_section.empty?
     %hr.separator
-    = render "application/root/keywords_section", section_content: @get.keywords_section.content
+    = render "application/root/keywords_section", section: @get.keywords_section
 
   - unless @get.vocabularies_section.empty?
     %hr.separator
-    = render "application/root/vocabularies_section", section_content: @get.vocabularies_section.content
+    = render "application/root/vocabularies_section", section: @get.vocabularies_section
