--- a/app/views/application/root/_catalog_section.haml
+++ b/app/views/application/root/_catalog_section.haml
@@ -1,3 +1,3 @@
-.ui-resources-holder.pal{id: section.content[:id]}
-  = render "application/root/section_title", section_content: section.content
-  = render "application/root/catalog/resources", list: section.content[:data][:list]
+.ui-resources-holder.pal{id: section[:content][:id]}
+  = render "application/root/section_title", section_content: section[:content]
+  = render "application/root/catalog/resources", list: section[:content][:data][:list]
