chore: resurrect accidentally reverted changes
changes:
- 8ec5016d3ddc54a8fcdb9bc9fe1f9b5ec9404dc0 fix: map legacy sortorder 'last_change' to 'last_change DESC'
- 5a5219db536be064b54b84777bd59515090f67e7 fix: correct html lang attr + suppress lang for preview_path
- 7a93c3599670bfe2dd5ab43d4363ad36faea5b95 fix: show resource title in meta data title of all public views
- 6ce3d9c0425906d8b1c9ac1a868e958698d6fa62 chore: refactor MediaResourcesBox state

reverted in:
- bf2d1e1304adacfafee3440875a5dea0919c688a feat: new meta data roles concept refactoring

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -1,4 +1,6 @@
 :ruby
+  content_for(:title_head) { @get.title }
+
   if @collection.try(:deleted_at).try(:present?)
     content_for(:app_alerts) do
       component('alert', level: 'error', text: t(:collection_deleted))
