--- a/app/views/layouts/_fullscreen.html.haml
+++ b/app/views/layouts/_fullscreen.html.haml
@@ -7,7 +7,7 @@
   site_title = begin; localize(settings.site_titles); rescue; end
   site_title ||= 'Madek' # fallback
   title = begin; @get[:title]; rescue nil; end
-  lang = 'de-CH'
+  lang = locale
 
 !!!
 %html{lang: lang}
