feat: new meta data roles concept refactoring

--- a/app/views/layouts/_base.haml
+++ b/app/views/layouts/_base.haml
@@ -6,7 +6,7 @@
 
 !!!
 -# NOTE: class 'has-js' is set dynamically with — suprise! — JavaScript.
-%html{lang: locale, prefix: 'og: http://ogp.me/ns#'}
+%html{lang: 'de-CH', prefix: 'og: http://ogp.me/ns#'}
   %head
     %meta{charset: 'utf-8'}
 
