--- a/app/views/layouts/_embedded.html.haml
+++ b/app/views/layouts/_embedded.html.haml
@@ -7,7 +7,7 @@
   site_title = begin; localize(settings.site_titles); rescue; end
   site_title ||= 'Madek' # fallback
   title = begin; @get[:title]; rescue; end
-  lang = locale
+  lang = 'de-CH'
   body_data = begin; { 'referer-host': @get[:embed_config]['referer_info']['host'] }; rescue; end || {}
 
 !!!
