chore: permission tooltips

--- a/app/assets/stylesheets/combos/_ui-rights-management.sass
+++ b/app/assets/stylesheets/combos/_ui-rights-management.sass
@@ -207,3 +207,11 @@ td.ui-rights-check-title
     width: 30%
   .ui-rights-check
     width: auto
+
+.ui-rights-management__ttip-toggle
+  display: inline-block
+  opacity: $opacity-medium
+  margin-left: 0.35em
+  margin-top: -0.35em
+  &:hover
+    opacity: 1
