chore: fix broken parts of styleguide

--- a/app/views/styleguide/12_React/_03_input-meta-datum.html.haml
+++ b/app/views/styleguide/12_React/_03_input-meta-datum.html.haml
@@ -6,7 +6,7 @@
   element = {
     name: 'Deco.InputMetaDatum',
     cssSelector: 'component',
-    cssFile: 'decorators/InputMetaDatum.cjsx',
+    cssFile: 'decorators/InputMetaDatum.jsx',
     section: '12.3',
     examples: meta_datum_input_examples
   }
